--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -5,8 +5,9 @@
     position: relative;
     min-height: 100vh;
     display: flex;
+    display: flex;
     align-items: center;
-    padding-top: 6rem;
+    padding: 8rem 0;
     overflow: hidden;
     background-color: var(--pk-color-background-dark);
 }
