--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -676,6 +676,34 @@
     transition: all 300ms;
 }
 
+.marqueeSection {
+    grid-column: 1 / -1;
+    margin-top: 4rem;
+    position: relative;
+    padding-top: 4rem;
+    border-top: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+.marqueeLabel {
+    text-align: center;
+    color: var(--pk-color-text-secondary);
+    text-transform: uppercase;
+    font-size: 0.875rem;
+    letter-spacing: 0.1em;
+    margin-bottom: 2rem;
+}
+
+.techTag {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: rgba(255, 255, 255, 0.3);
+    transition: color 300ms;
+}
+
+.techTag:hover {
+    color: white;
+}
+
 .statCard:hover {
     border-color: rgba(19, 91, 236, 0.3);
     background-color: rgba(19, 91, 236, 0.05);
