feat: add premium custom cursor

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -54,13 +54,27 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media (hover: hover) and (pointer: fine) {
+
+  body,
+  a,
+  button,
+  input,
+  textarea,
+  select {
+    cursor: none !important;
+  }
+}
+
 html.dark body {
   background-color: var(--pk-color-background-dark);
   color: var(--pk-color-text-white);
 }
 
 /* Utility / Reset */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
