--- a/src/components/InfiniteMarquee/InfiniteMarquee.module.css
+++ b/src/components/InfiniteMarquee/InfiniteMarquee.module.css
@@ -2,6 +2,7 @@
     overflow: hidden;
     position: relative;
     width: 100%;
+    max-width: 100%;
     mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
     -webkit-mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
 }
