--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -52,6 +52,8 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 @media (hover: hover) and (pointer: fine) {
